Update placeholder text in About, Contacts, and Projects pages

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
         <div class="row w-100 align-items-center" style="min-height:70vh;">
             <div class="col-md-6 ps-md-5 pt-5 pt-md-0 d-flex flex-column justify-content-center" style="min-height:350px;">
                 <h1 class="fw-bold display-4 mb-2" style="letter-spacing:2px; color:#23202b; font-size:3rem;">Projects</h1>
-                <div class="fs-5" style="color:#23202b; font-size:1.3rem;">This is a placeholder for your projects. List and describe your portfolio projects here.</div>
+                <div class="fs-5" style="color:#23202b; font-size:1.3rem;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center pt-4 pt-md-0" style="min-height:350px;">
                 <img src="assets/images/person-using-laptop-2-removebg-preview.png" alt="Developer Illustration" class="img-fluid developer-image">
